--- a/Jamoma/documentation/html/index.html
+++ b/Jamoma/documentation/html/index.html
@@ -22,46 +22,14 @@
 		<h3>Welcome</h3>
 		<p>This is an overview of the available documentation for Jamoma.  This documentation will be growing as the project moves toward a fully developed version 1.0.  Please submit suggestions, additions, etc. to one of the project developers at the <a href="http://sourceforge.net/mail/?group_id=78108">jamoma-users list</a> that is used as a part of this project.</p>
 		<p>If you are interested in who has contributed to Jamoma, we also maintain a <a href="credits.html">credits</a> page with this documentation. </p>
+
 		<h3>Documentation</h3>
-<h4>Using Jamoma Modules</h4>
-		
-<p>This is a guide to getting started with using modules in Max, MSP, and Jitter. 
-  This is for users of modules, rather than developers of modules.</p>
-<ol>
-  <li>Using Jamoma modules
-  <ul>
-      <li><a href="tutorials/using_jamoma_01.html">Tutorial one - a stereo effect module</a></li>
-  </ul>
-  </li>
-</ol>
-<h4>Creating New Modules</h4>
-<p>This is a set of tutorials for how to create your own custom modules. It is 
-  recommended that you start out with the introduction and the simple control 
-  module. You can then skip to the audio or video part depending on your needs 
-  and interests.</p>
-<ol>
-  <li><a href="tutorials/build_modules_01.html">Introduction</a></li>
-  <li>Creating control modules
-  <ul>
-      <li><a href="tutorials/build_modules_02a.html">jmod.qmetro.mod - a simple 
-        control module</a></li>
-  </ul>
-  </li>
-  <li>Creating audio modules 
-    <ul>
-      <li>jmod.???~.mod - a simple audio effect module</li>
-    </ul>
-  </li>
-  <li>Creating video modules 
-    <ul>
-      <li>jmod.fastblur%.mod - a simple video effect module</li>
-    </ul>
-    </li>
-</ol>
+
+		<p>Please use the Max file browser to search for the <a href="..">jamoma-overview</a> and <a href="..">jamoma-tutorials</a> patches.</P>
+
 
 <h4>Documentation of Existing Jamoma Modules</h4>
-<p>HTML documentation of all existing Jamoma modules can be found <a href="modules/">here</a>. 
-  You'll also find help files for all modules that comes as part of Jamoma.</p>
+<p>HTML documentation of all existing Jamoma modules can be loaded from the pop-up menu in the3 upper left corner of the module. The same place you will be able to access the help file for the module.</p>
 
 <h4>Jamoma Interface Guidelines (JIG)</h4>
 		<p>The primary documentation for Jamoma is the <a href="interface_guidelines.html">JIG</a>.  This document contains the specifications for all Jamoma (or Jamoma-Compliant) modules. </p>
