--- a/Jamoma/modules/control/midiin/jmod.midiin.html
+++ b/Jamoma/modules/control/midiin/jmod.midiin.html
@@ -153,7 +153,7 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td class ="instructionDescription"> Generate a documentation page for this module and save it to disk. </td>
 		<tr>
 		<tr>
-			<td class="instructionName"> initMidi </td>
+			<td class="instructionName"> initDevice </td>
 			<td class ="instructionType"> generic </td>
 			<td class ="instructionRangeBounds"> 0.000000 1.000000 </td>
 			<td class ="instructionRangeClipmode"> none </td>
