--- a/Jamoma/modules/control/polhemus/jmod.polhemus.html
+++ b/Jamoma/modules/control/polhemus/jmod.polhemus.html
@@ -164,7 +164,7 @@ Number of signal outlets: <code> 0 </code> </p>
 			<td class ="instructionDescription"> Initialize a module completely to the original state. </td>
 		<tr>
 		<tr>
-			<td class="instructionName"> initSerial </td>
+			<td class="instructionName"> initDevice </td>
 			<td class ="instructionType"> none </td>
 			<th class = "instructionRangeBounds"> N/A </td>
 			<td class ="instructionRangeClipmode"> none </td>
