--- a/Jamoma/modules/control/wacom/jmod.wacom.html
+++ b/Jamoma/modules/control/wacom/jmod.wacom.html
@@ -142,7 +142,7 @@ Number of signal outlets: <code> 0 </code> </p>
 			<td class ="instructionDescription"> Generate a documentation page for this module and save it to disk. </td>
 		<tr>
 		<tr>
-			<td class="instructionName"> init </td>
+			<td class="instructionName"> initDevice </td>
 			<td class ="instructionType"> generic </td>
 			<td class ="instructionDataspace"> none </td>
 			<th class = "instructionRangeBounds"> N/A </td>
