--- a/UserLib/PhysicalInterfaces/Arduino/jmod.arduino.html
+++ b/UserLib/PhysicalInterfaces/Arduino/jmod.arduino.html
@@ -109,7 +109,7 @@ Number of signal outlets: <code> 0 </code> </p>
 			<td class ="instructionDescription"> Generate a documentation page for this module and save it to disk. </td>
 		<tr>
 		<tr>
-			<td class="instructionName"> init_serial </td>
+			<td class="instructionName"> initDevice </td>
 			<td class ="instructionType"> none </td>
 			<th class = "instructionRangeBounds"> N/A </td>
 			<td class ="instructionRangeClipmode"> none </td>
