--- a/UserLib/PhysicalInterfaces/Phidgets/phidgets.interfacekit/jmod.phidgets.interfacekit.html
+++ b/UserLib/PhysicalInterfaces/Phidgets/phidgets.interfacekit/jmod.phidgets.interfacekit.html
@@ -164,7 +164,7 @@ Number of signal outlets: <code> 0 </code> </p>
 			<td class ="instructionDescription"> Generate a documentation page for this module and save it to disk. </td>
 		<tr>
 		<tr>
-			<td class="instructionName"> init </td>
+			<td class="instructionName"> initDevice </td>
 			<td class ="instructionType"> generic </td>
 			<td class ="instructionRangeBounds"> 0.000000 1.000000 </td>
 			<td class ="instructionRangeClipmode"> none </td>
