--- a/Max/modules/spatialization/sur.ambi.encodeM~/jmod.sur.ambi.encodeM~.html
+++ b/Max/modules/spatialization/sur.ambi.encodeM~/jmod.sur.ambi.encodeM~.html
@@ -22,7 +22,7 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 	Algorithm Type: <code> default </code> </p>
 	<p>Interface Size: <code> 1U-half </code> </p>
 	<p>Number of signal inlets: <code> 0 </code> <br/>
-	Number of signal outlets: <code> 4194305 </code> </p>
+Number of signal outlets: <code> 0 </code> </p>
 	<h3> Parameters </h3>
 	<table>
 		<tr class="tableHeading2">
@@ -136,7 +136,7 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 			<td class="instructionName"> order </td>
 			<td class ="instructionType"> integer </td>
-			<td class ="instructionRangeBounds"> 1 11 </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> none </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -147,8 +147,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.1/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -159,8 +159,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.10/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -171,8 +171,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.11/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -183,8 +183,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.12/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -195,8 +195,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.13/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -207,8 +207,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.14/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -219,8 +219,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.15/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -231,8 +231,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.16/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -243,8 +243,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.17/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -255,8 +255,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.18/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -267,8 +267,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.19/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -279,8 +279,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.2/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -291,8 +291,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.20/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -303,8 +303,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.21/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -315,8 +315,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.22/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -327,8 +327,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.23/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -339,8 +339,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.24/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -351,8 +351,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.25/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -363,8 +363,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.26/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -375,8 +375,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.27/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -387,8 +387,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.28/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -399,8 +399,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.29/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -411,8 +411,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.3/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -423,8 +423,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.30/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -435,8 +435,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.31/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -447,8 +447,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.32/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -459,8 +459,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.4/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -471,8 +471,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.5/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -483,8 +483,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.6/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -495,8 +495,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.7/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -507,8 +507,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.8/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -519,8 +519,8 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> source.9/order </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> 0.000000 100.000000 </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 3 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> scheduler </td>
 			<td class ="instructionRampFunction"> none </td>
